envs/dev/order-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-worker
  namespace: olive-dev
  labels:
    app: order-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-worker
  template:
    metadata:
      labels:
        app: order-worker
    spec:
      serviceAccountName: order-worker
      containers:
        - name: order-worker
          image: 065227443107.dkr.ecr.ap-northeast-2.amazonaws.com/olive/order-worker:dev-20260122-140206
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
